@startuml

class Base {
    +getId(): String
    +equals(Object o): boolean
    +hashCode(): int
    +toFile(): String
    +fromFile(String line): T
    +getInfo(): String
}

class Account {
    +id: String
    +nombre: String
    +apellido: String
    +phone: String
    +email: String
    +user: String
    +hashedPassword: String
    +tipoCuenta: TipoCuenta
    +getId(): String
    +getNombre(): String
    +getApellido(): String
    +getFullName(): String
    +getPhone(): String
    +getEmail(): String
    +getUser(): String
    +getTipoCuenta(): TipoCuenta
    +setPhone(String phone)
    +setUser(String user)
    +setPassword(String newPassword)
    +setTipoCuenta(TipoCuenta tipoCuenta)
    +isAdmin(): boolean
    +isProfesor(): boolean
    +isEstudiante(): boolean
}

class News {
    +id: String
    +mensaje: String
    +fecha: LocalDateTime
    +leida: boolean
    +tipoNotificacion: String
    +destinatarioId: String
    +getId(): String
    +getMensaje(): String
    +getFecha(): LocalDateTime
    +isLeida(): boolean
    +getTipoNotificacion(): String
    +getDestinatarioId(): String
    +setMensaje(String mensaje)
    +setLeida(boolean leida)
    +setTipoNotificacion(String tipoNotificacion)
}

class Room {
    +id: String
    +nombre: String
    +esFisica: boolean
    +disponible: char
    +capacidad: int
    +tieneProyector: boolean
    +getId(): String
    +getNombre(): String
    +isEsFisica(): boolean
    +getDisponible(): char
    +getCapacidad(): int
    +isTieneProyector(): boolean
    +setCapacidad(int capacidad)
    +setTieneProyector(boolean tieneProyector)
    +setTipo(char tipo)
    +setDisponible(char estado)
}

Base <|-- Account
Base <|-- News
Base <|-- Room

@enduml